--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         </center>
             <!-- här använder jag snap och em för fontstyl-->
             <a href="Educa.html"><i class="fas fa-user-graduate"><span>Utbildning</span></i></a>
-            <a href="#"><i class="fas fa-gift"><span>Tradition</span></i></a>
-            <a href="#"><i class="fas fa-skiing-nordic"><span>Sport</span></i></a>
-            <a href="#"><i class="fas fa-business-time"><span>Företag</span></i></a>
+            <a href="trada.html"><i class="fas fa-gift"><span>Tradition</span></i></a>
+            <a href="sport.html"><i class="fas fa-skiing-nordic"><span>Sport</span></i></a>
+            <a href="Comp.html"><i class="fas fa-business-time"><span>Företag</span></i></a>
             <a href="#"><i class="fas fa-city"><span>Berg</span></i></a>
           
             
